--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.10",
+    "math.gl": "^2.2.0",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
